<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".InstructionsPage">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="229dp"
        android:layout_height="44dp"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="25dp"
        android:text="@string/inshead"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="407dp"
        android:layout_height="451dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="80dp"
        android:layoutDirection="rtl"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckedTextView
            android:id="@+id/checkedTextView"
            android:layout_width="383dp"
            android:layout_height="357dp"
            android:text="@string/noughts_and_crosses_tic_tac_toe_3x3_a1_a3_c3"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:text="@string/checkbox" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="66dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="116dp"
        android:contentDescription="@string/todo1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/movie_btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/agree" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="368dp"
        android:layout_height="137dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <Button
            android:id="@+id/movie_btn"
            android:layout_width="94dp"
            android:layout_height="57dp"
            android:layout_marginEnd="183dp"
            android:layout_marginBottom="47dp"
            android:text="@string/movie_example"
            android:textSize="12sp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="96dp"
            android:layout_height="57dp"
            android:layout_marginStart="232dp"
            android:layout_marginBottom="25dp"
            android:text="@string/button1" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>